SERVER-84353 Make read ticket exhaustion with stepDown test less flaky (#17746)

GitOrigin-RevId: 231d6367ea3c7670a458ce00252d970979d7f5be